[gd_scene load_steps=32 format=2]

[ext_resource path="res://files/scenes/MainTheme.tres" type="Theme" id=1]
[ext_resource path="res://assets/images/buttons/main screen/speednorm2.png" type="Texture" id=2]
[ext_resource path="res://assets/images/buttons/main screen/speedstop0.png" type="Texture" id=3]
[ext_resource path="res://assets/images/buttons/main screen/speednorm0.png" type="Texture" id=4]
[ext_resource path="res://assets/images/buttons/main screen/speedstop1.png" type="Texture" id=5]
[ext_resource path="res://assets/images/buttons/main screen/speedfast1.png" type="Texture" id=6]
[ext_resource path="res://assets/images/buttons/main screen/speedfast2.png" type="Texture" id=7]
[ext_resource path="res://assets/images/buttons/main screen/speedstop2.png" type="Texture" id=8]
[ext_resource path="res://assets/images/buttons/main screen/speednorm1.png" type="Texture" id=9]
[ext_resource path="res://assets/images/buttons/main screen/speedfast0.png" type="Texture" id=10]
[ext_resource path="res://files/scenes/village/Blacksmith.tscn" type="PackedScene" id=11]
[ext_resource path="res://files/scenes/village/TownHall.tscn" type="PackedScene" id=12]
[ext_resource path="res://files/scenes/village/MainScreen_new.gd" type="Script" id=13]
[ext_resource path="res://files/scenes/village/building_template.gd" type="Script" id=14]
[ext_resource path="res://assets/images/bg/unused/sky.png" type="Texture" id=15]
[ext_resource path="res://assets/images/bg/unused/sky_night.png" type="Texture" id=16]
[ext_resource path="res://assets/images/bg/unused/town.png" type="Texture" id=17]
[ext_resource path="res://assets/images/buildings/mine.png" type="Texture" id=18]
[ext_resource path="res://assets/images/buildings/gate.png" type="Texture" id=19]
[ext_resource path="res://assets/images/buildings/city_hall.png" type="Texture" id=20]
[ext_resource path="res://assets/images/gui/timepanel.png" type="Texture" id=21]
[ext_resource path="res://assets/images/buildings/tavern.png" type="Texture" id=22]
[ext_resource path="res://assets/images/buildings/forge_2.png" type="Texture" id=23]
[ext_resource path="res://assets/images/gui/timesphere.png" type="Texture" id=24]
[ext_resource path="res://assets/images/buildings/market.png" type="Texture" id=25]
[ext_resource path="res://assets/images/buildings/sawmill.png" type="Texture" id=26]
[ext_resource path="res://assets/images/buildings/farm.png" type="Texture" id=27]
[ext_resource path="res://assets/images/gui/exclamation.png" type="Texture" id=28]
[ext_resource path="res://files/scenes/village/ShopMenu.tscn" type="PackedScene" id=29]
[ext_resource path="res://assets/images/gui/charpanel/panel_charinfo_gear.png" type="Texture" id=30]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 30 )
region_rect = Rect2( 0, 0, 258.65, 300.1 )
margin_left = 15.1093
margin_right = 14.2568
margin_top = 24.1694
margin_bottom = 17.2678

[node name="MainScreen" type="Control"]
theme = ExtResource( 1 )
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sky" type="Sprite" parent="."]
position = Vector2( 960.02, 538.517 )
scale = Vector2( 1.00002, 0.997191 )
texture = ExtResource( 15 )
region_enabled = true
region_rect = Rect2( 0, 0, 1920, 1080 )

[node name="NightSky" type="TextureRect" parent="."]
modulate = Color( 0.664909, 0.656204, 0.714844, 0 )
margin_left = 440.0
margin_right = 1920.0
margin_bottom = 394.0
texture = ExtResource( 16 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 17 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="townhall" type="TextureButton" parent="."]
margin_left = 636.102
margin_top = 213.816
margin_right = 1088.1
margin_bottom = 570.816
texture_normal = ExtResource( 20 )
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}
outline_hover = true

[node name="QuestActive" type="TextureRect" parent="townhall"]
margin_left = 383.435
margin_top = -38.6175
margin_right = 517.435
margin_bottom = 84.3825
texture = ExtResource( 28 )

[node name="LabelRect" type="Panel" parent="townhall"]
margin_left = 127.0
margin_top = -29.0
margin_right = 372.0
margin_bottom = 8.0
custom_styles/panel = SubResource( 1 )

[node name="Label" type="Label" parent="townhall/LabelRect"]
margin_left = 2.70709
margin_top = 6.12132
margin_right = 236.707
margin_bottom = 30.1213
text = "Townhall"
align = 1

[node name="bridge" type="TextureButton" parent="."]
margin_left = 1569.76
margin_top = 518.503
margin_right = 1888.76
margin_bottom = 868.503
texture_normal = ExtResource( 19 )
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}
outline_hover = true

[node name="QuestActive" type="TextureRect" parent="bridge"]
margin_left = 194.498
margin_top = -9.92053
margin_right = 293.498
margin_bottom = 83.0795
texture = ExtResource( 28 )
expand = true

[node name="LabelRect" type="Panel" parent="bridge"]
margin_left = -16.6579
margin_top = -33.687
margin_right = 228.342
margin_bottom = 3.31299
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="bridge/LabelRect"]
margin_left = 2.70709
margin_top = 6.12132
margin_right = 236.707
margin_bottom = 30.1213
text = "Exit"
align = 1

[node name="mine" type="TextureButton" parent="."]
margin_left = 90.6535
margin_top = 402.904
margin_right = 409.653
margin_bottom = 752.904
texture_normal = ExtResource( 18 )
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuestActive" type="TextureRect" parent="mine"]
margin_left = 200.728
margin_top = -37.2357
margin_right = 334.728
margin_bottom = 85.7643
texture = ExtResource( 28 )

[node name="market" type="TextureButton" parent="."]
margin_left = 222.685
margin_top = 495.09
margin_right = 674.685
margin_bottom = 918.09
texture_normal = ExtResource( 25 )
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}
outline_hover = true

[node name="LabelRect" type="Panel" parent="market"]
margin_left = 40.417
margin_top = 69.726
margin_right = 285.417
margin_bottom = 106.726
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="market/LabelRect"]
margin_left = 2.70709
margin_top = 6.12132
margin_right = 236.707
margin_bottom = 30.1213
text = "Market"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuestActive" type="TextureRect" parent="market"]
margin_left = 222.668
margin_top = -77.1963
margin_right = 356.668
margin_bottom = 45.8037
texture = ExtResource( 28 )

[node name="farm" type="TextureButton" parent="."]
margin_left = 1119.19
margin_top = 455.14
margin_right = 1554.19
margin_bottom = 805.14
texture_normal = ExtResource( 27 )
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuestActive" type="TextureRect" parent="farm"]
margin_left = 182.102
margin_top = -59.912
margin_right = 316.102
margin_bottom = 63.088
texture = ExtResource( 28 )

[node name="forge" type="TextureButton" parent="."]
margin_left = 557.702
margin_top = 399.123
margin_right = 876.702
margin_bottom = 749.123
texture_normal = ExtResource( 23 )
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}
outline_hover = true

[node name="QuestActive" type="TextureRect" parent="forge"]
margin_left = 274.0
margin_top = 18.0
margin_right = 408.0
margin_bottom = 141.0
texture = ExtResource( 28 )

[node name="LabelRect" type="Panel" parent="forge"]
margin_left = 35.4
margin_top = 65.6931
margin_right = 280.4
margin_bottom = 102.693
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="forge/LabelRect"]
margin_left = 2.70709
margin_top = 6.12132
margin_right = 236.707
margin_bottom = 30.1213
text = "Blacksmith"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tavern" type="TextureButton" parent="."]
margin_left = 1406.62
margin_top = 642.665
margin_right = 1857.62
margin_bottom = 992.665
texture_normal = ExtResource( 22 )
script = ExtResource( 14 )

[node name="QuestActive" type="TextureRect" parent="tavern"]
margin_left = 396.726
margin_top = 19.7818
margin_right = 530.726
margin_bottom = 142.782
texture = ExtResource( 28 )

[node name="mill" type="TextureButton" parent="."]
margin_left = 778.66
margin_top = 776.495
margin_right = 1265.66
margin_bottom = 1126.5
texture_normal = ExtResource( 26 )
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuestActive" type="TextureRect" parent="mill"]
margin_left = 272.0
margin_top = 18.0
margin_right = 406.0
margin_bottom = 141.0
texture = ExtResource( 28 )

[node name="TownHall" parent="." instance=ExtResource( 12 )]
visible = false

[node name="Blacksmith" parent="." instance=ExtResource( 11 )]
visible = false

[node name="shop" parent="." instance=ExtResource( 29 )]
visible = false

[node name="TimeNode" type="TextureRect" parent="."]
visible = false
margin_right = 234.0
margin_bottom = 125.0
texture = ExtResource( 21 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Date" type="Label" parent="TimeNode"]
margin_left = 11.0
margin_top = 9.0
margin_right = 156.0
margin_bottom = 33.0
custom_colors/font_color = Color( 0.597656, 0.428544, 0.0280151, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Date"

[node name="0speed" type="TextureButton" parent="TimeNode"]
margin_left = 152.0
margin_top = -1.0
margin_right = 205.0
margin_bottom = 40.0
toggle_mode = true
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 5 )

[node name="1speed" type="TextureButton" parent="TimeNode"]
margin_left = 203.0
margin_top = -1.0
margin_right = 256.0
margin_bottom = 40.0
toggle_mode = true
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 9 )

[node name="2speed" type="TextureButton" parent="TimeNode"]
margin_left = 254.0
margin_top = -1.0
margin_right = 304.0
margin_bottom = 40.0
toggle_mode = true
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 6 )

[node name="HidePanel" type="Panel" parent="TimeNode"]
visible = false
self_modulate = Color( 1, 1, 1, 0.77898 )
margin_left = -1.0
margin_right = 312.0
margin_bottom = 158.0

[node name="TimeWheel" type="TextureRect" parent="TimeNode"]
show_behind_parent = true
margin_left = 2.0
margin_top = -153.0
margin_right = 309.0
margin_bottom = 154.0
rect_rotation = 360.0
rect_pivot_offset = Vector2( 153.5, 153.5 )
mouse_filter = 2
texture = ExtResource( 24 )

[node name="LogPanel" type="Panel" parent="."]
visible = false
self_modulate = Color( 0.0234375, 1, 0.267578, 0.364627 )
margin_left = 1332.0
margin_top = 633.0
margin_right = 1910.0
margin_bottom = 1056.0

[node name="RichTextLabel" type="RichTextLabel" parent="LogPanel"]
margin_left = 10.0
margin_top = 17.0
margin_right = 566.0
margin_bottom = 410.0
bbcode_enabled = true
scroll_following = true

[node name="VotePanel" type="Panel" parent="."]
visible = false
margin_left = 642.0
margin_top = 310.0
margin_right = 1249.0
margin_bottom = 686.0

[node name="RichTextLabel" type="RichTextLabel" parent="VotePanel"]
margin_left = 33.0
margin_top = 27.0
margin_right = 584.0
margin_bottom = 205.0
bbcode_enabled = true
bbcode_text = "Thank you for playing Displaced Demo. Please take a few minutes to vote so we can know how to make this game better for you!"
text = "Thank you for playing Displaced Demo. Please take a few minutes to vote so we can know how to make this game better for you!"

[node name="Links" type="Button" parent="VotePanel"]
margin_left = 169.0
margin_top = 200.0
margin_right = 428.0
margin_bottom = 244.0
text = "Open Vote Link"

[node name="Close" type="Button" parent="VotePanel"]
margin_left = 169.0
margin_top = 280.0
margin_right = 428.0
margin_bottom = 324.0
text = "Close"

[node name="Tween" type="Tween" parent="."]
